[package]
name = "rusty-pelican"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
base64 = "0.21.0"
bincode = "1.3.3"
rand = "0.8.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive", "serde_derive"] }
